# sdp8xx-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: linux.rs
proptest-regressions/: lib.txt
sdp8xx/: Cargo.toml
sdp8xx-example-raspi/: Cargo.toml
sdp8xx-example-raspi/.cargo/: config
sdp8xx-example-raspi/src/: main.rs
sdp8xx-example-stm32f0/: Cargo.toml  memory.x
sdp8xx-example-stm32f0/src/: main.rs
sdp8xx/src/: command.rs  lib.rs  product_info.rs  sample.rs  states.rs  test.rs
src/: command.rs  lib.rs  product_info.rs  sample.rs  states.rs  test.rs
