[package]
name = "sdp8xx"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
license = "MIT"
description = "Platform agnostic Rust driver for the Sensirion SDP8xx differential pressure sensor."
readme = "README.md"
keywords = ["sdp8xx", "sensirion", "driver", "embedded-hal-driver"]
repository = "https://github.com/barafael/sdp8xx-rs"
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"

[dependencies.sensirion-i2c]
git = "https://github.com/barafael/sensirion-i2c-rs"
branch = "tryfrom_for_i2cbuffer"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
