[package]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
readme = "README.md"
name = "sdp8xx-example-stm32f0"
version = "0.1.0"
license = "MIT License"
repository = "https://github.com/barafael/sdp8xx-test-f0"
edition = "2021"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies]
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.6.3"
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f072"] }

[dependencies.sdp8xx]
path = "../sdp8xx"

# this lets you use `cargo fix`!
[[bin]]
name = "sdp8xx-example-stm32f0"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[workspace]
